fixed css reference

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -64,7 +64,7 @@ block[h2] {
     width: 256px;
 }
 
-big.doorname {
+.doorname {
     background-color: #EFEFEF;
     padding: 8px;
     color: #00000A;
