Removed button bg and changed colors of door names

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -65,8 +65,8 @@ block[h2] {
 }
 
 .doorname {
-    background-color: #A8D1F8;
+    background-color: #FF000410;
     padding: 4px;
-	margin: 2px;
-    color: #00000A;
+    margin: 2px;
+    color: #FFE7F9FF;
 }
